# black_hole_raytracing

./: CMakeLists.txt  CMakeLists.txt~  README.md  angles.csv  angles_rkf4.csv
PythonImageProcessing/: main.py
src/: CMakeLists.txt  main.cpp  main.cpp~
src/ray_tracing/: CMakeLists.txt  ray_tracing.cpp  ray_tracing.cpp~  ray_tracing.hpp  ray_tracing.hpp~
src/ray_tracing/math_formula/: CMakeLists.txt  math_formula.cpp  math_formula.cpp~  math_formula.hpp  math_formula.hpp~
src/ray_tracing/ray_equations/: .#ray_equations.cpp  CMakeLists.txt  ray_equations.cpp  ray_equations.hpp  ray_equations2.cpp  ray_equations2.cpp~
src/ray_tracing/ray_equations/equations_of_motion/: CMakeLists.txt  equations_of_motion.cpp  equations_of_motion.cpp~  equations_of_motion.hpp
test/: CMakeLists.txt  test_mathformula.cpp  test_ray_equations_rkf4_stand_alone.cpp  test_raytracing.cpp  test_raytracing.cpp~  testmain.cpp
test/tests_ray_equations/: output.csv  test_rungeKuttaFehlberg_main.cpp  test_rungeKuttaFehlberg_support.cpp  test_rungeKuttaFehlberg_support.hpp  test_rungeKuttaFehlberg_support.hpp.gch
test/tests_ray_equations/OrbitPloting/: main.py
